config/samples/gateway-multinetwork.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: example-multinetwork
  namespace: default
spec:
  gatewayClassName: portail
  listeners:
  - name: http
    protocol: HTTP
    port: 8080
  addresses:
  - type: portail.epheo.eu/Network
    value: udn-frontend
